fix(quest): pg start quests for player queries
